Fix list-declaration on iOS devices

--- a/css/style-tablet.css
+++ b/css/style-tablet.css
@@ -36,5 +36,5 @@
 }
 
 .page-footer ul li {
-    display: list-item;
+    display: block;
 }
